--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="icon" id="iconny" href="/src/assets/logo.png" />
+    <script type='text/javascript' src='//pl22666849.profitablegatecpm.com/69/97/b0/6997b06c3efe2aad903c33475f61b2a6.js'></script>
+    <script type='text/javascript' src='//pl22667078.profitablegatecpm.com/ed/d6/27/edd627939d21229c8335c92b2a743aa7.js'></script>
     <title>Abyss</title>
     <script src="/uv/uv.bundle.js"></script>
     <script src="/uv/uv.config.js"></script>
